--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="play_button_title">play</string>
     <string name="tutorial_button_title">tutorial</string>
+    <string name="game_over">Упс!</string>
 </resources>
